[gd_scene load_steps=10 format=2]

[ext_resource path="res://Nivel simples.bmp" type="Texture" id=1]
[ext_resource path="res://Node2D_Main.gd" type="Script" id=2]
[ext_resource path="res://planta_nivel.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.984314, 0.0392157, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.14902, 0.639216, 0.294118, 1 )

[sub_resource type="BitmapFont" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.847059, 0.580392, 0.0117647, 0.372549 )

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Nivel simples" type="Sprite" parent="."]
position = Vector2( 512, 328 )
scale = Vector2( 0.919559, 1.01411 )
texture = ExtResource( 1 )

[node name="planta_nivel" type="Sprite" parent="Nivel simples"]
position = Vector2( 356.693, -109.8 )
scale = Vector2( 0.187359, 0.139661 )
texture = ExtResource( 3 )

[node name="Nivel_Rect" type="ColorRect" parent="."]
margin_left = 445.0
margin_top = 520.0
margin_right = 541.0
margin_bottom = 790.0
rect_rotation = 180.0
color = Color( 0.294118, 0.741176, 0.733333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vazao_Entrada_VSlider" type="VSlider" parent="."]
material = SubResource( 1 )
margin_left = 152.0
margin_top = 408.0
margin_right = 168.0
margin_bottom = 544.0
rect_scale = Vector2( 3, 2 )
rect_pivot_offset = Vector2( 32, 160 )
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vazao_Saida" type="ColorRect" parent="."]
margin_left = 642.0
margin_top = 500.0
margin_right = 652.0
margin_bottom = 600.0
rect_rotation = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Vazao_Saida"]
show_behind_parent = true
margin_left = 13.0
margin_top = 130.0
margin_right = 29.0
margin_bottom = 260.0
rect_rotation = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetPoint_VSlider" type="VSlider" parent="."]
use_parent_material = true
margin_left = 336.0
margin_top = 248.0
margin_right = 352.0
margin_bottom = 520.0
rect_scale = Vector2( 2, 1 )
editable = false
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 320.0
margin_right = 65.0
margin_bottom = 351.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Vazão de
Entrada"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 656.0
margin_top = 448.0
margin_right = 713.0
margin_bottom = 479.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Vazão de
Saída"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 280.0
margin_top = 376.0
margin_right = 337.0
margin_bottom = 407.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SetPoint"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 368.0
margin_top = 376.0
margin_right = 425.0
margin_bottom = 407.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nível"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Man_Aut" type="Button" parent="."]
margin_left = 120.0
margin_top = 88.0
margin_right = 144.0
margin_bottom = 108.0
hint_tooltip = "Pressione para
alternar entre
Manual e
Automático"
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
action_mode = 0
text = "M/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 256.0
margin_top = 520.0
margin_right = 528.0
margin_bottom = 571.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
